2012-12-17: Release v0.4.0.

2012-12-15: Add stats formatter (-f stats) to output statistics on results data sets.

2012-12-13: Fix bug that caused smoothing to add new data points at the ends of
            series.

2012-12-13: Fix bug that caused primary axis to place ticks on the right hand
            side in dual-axis plots.

2012-12-13: Release v0.3.0.

2012-12-13: Lookup hostnames before starting runners and determine default IP
            version from them. Thanks to David Woodhouse for the suggestion.

2012-12-13: Add workaround for bug in old matplotlib versions that broke
            exporting of plots.

2012-12-10: Add options to turn off annotation, legend and title on plots
            (--no-annotation, --no-legend and --no-title resp.).

2012-12-10: Add automatic switching to log scale for regular plots as well as
            cdf plots. For regular plots, data differing by more than a factor
            of 20 triggers log scaling.

2012-12-10: Add rtt_fair test.

2012-12-10: Fix spurious error when running netperf-wrapper with a test name
            that is also an existing file name (that is, make the error message
            intelligible).

2012-12-09: Automatically switch CDF plots to log scale if the median values
            differ by more than an order of magnitude.

2012-12-09: Support multiple -i options to combine several result sets into one
            table/set of plots. Basically, reading in multiple data sets by
            supplying -i multiple times on the command line now plots them all
            together; this does not work well for all plots, but for some it
            does. Differentiating between the data sets is done by the title
            (set with -t) of the result sets (i.e. -t must be supplied when the
            data set is generated).

2012-12-09: Put custom (-t) plot titles on the same line as the plot name
            (otherwise the title overlaps the plot area for plots exported to
            file).
