@@ -1,3 +1,8 @@
+2012-12-20: If there are missing data values when doing a CDF plot, the plot
+            should cut off at a probability < 1; i.e. use the total size of the
+            data (including null data points) as data set size when calculating
+            probability.
+
 2012-12-17: Release v0.4.0.
 
 2012-12-15: Add stats formatter (-f stats) to output statistics on results data sets.
